@@ -11,6 +11,7 @@
 - Bugfix: Cut off parameter analysis
 - Bugfix: Property analysis does not handle predefined classes
   correctly.
+- Bugfix: "Autoloading" may fail with a weird directory path
 
 3.0.1
 - Change: All singelton classes now add themself to the pool as
